feat: add uiResource API with React hooks for interactive widgets
- Add uiResource() method to McpServer for registering interactive UI widgets
- Support three widget types: externalUrl, rawHtml, and remoteDom
- Create @mcp-lite/react package with useWidget hook and OpenAI Apps SDK compatibility
- Add comprehensive example with weather widget demonstrating React integration
- Include manual testing guide and automated test script
- Auto-register widgets as both tools (with params) and resources (static + dynamic)
- Props flow via URL query params and window.openai.toolInput injection

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "workspaces": [
     "packages/*",
     "playground",
-    "examples/*"
+    "examples/*",
+    "examples/*/widget-app"
   ],
   "repository": {
     "type": "git",
